# template-manager

./: Cargo.toml  flake.nix
.github/workflows/: build.yml
nix/: home-manager.nix  shell.nix  template-manager.nix
src/: download_files.rs  get_directory_tree.rs  main.rs  template.rs
src/args/: mod.rs  print_completions.rs
src/args/parsers/: path.rs
template-manager/: Cargo.toml
template-manager-codegen/: Cargo.toml
template-manager/src/: download_files.rs  template.rs
template-manager/src/args/: print_completions.rs
template-manager_macro_derive/src/: lib.rs
templates/haskell/: LICENSE  flake.nix  haskell-template.cabal  package.yaml  stack.yaml
templates/python/: .gitignore  flake.nix  pyproject.toml
templates/rust/: flake.nix
templates/simple-haskell/: flake.nix
