[package]
name = "template-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
clap_complete = "4.5.60"
clap_complete_nushell = "4.5.10"
color-eyre = "0.6.5"
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls" ], default-features = false }
serde = "1.0.228"
serde_json = "1.0.145"
